<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#00FFFF">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textSize="32sp"
        android:text="@string/gameoverText"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/yourscoreText"
        android:id="@+id/yourscore"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Score"
        android:id="@+id/getScore"
        android:layout_gravity="center_horizontal" />


    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRetryGame"
        android:onClick="ClickStartGame"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnHighScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highscoreText"
        android:onClick="ClickHighScore"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnAchievements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/achievementText"
        android:onClick="ClickAchievement"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnExitGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnExitGame"
        android:onClick="ClickExitGame"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</LinearLayout>