<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:background="@drawable/abc_popup_background_mtrl_mult">

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStartGame"
        android:onClick="ClickStartGame"
        android:layout_above="@+id/btnHighScore"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/btnHighScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highscoreText"
        android:onClick="ClickHighScore"
        android:layout_above="@+id/btnAchievements"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnAchievements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/achievementText"
        android:onClick="ClickAchievement"
        android:layout_above="@+id/btnExitGame"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnExitGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnExitGame"
        android:onClick="ClickExitGame"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:background="@drawable/backgroundstart"
        android:longClickable="true"
        android:scaleType="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/btnStartGame" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Fly Spotter"
        android:id="@+id/introText"
        android:textStyle="bold"
        android:textSize="48sp"
        android:background="#FFFFFF"
        android:layout_centerHorizontal="true"
        tools:ignore="HardcodedText" />


</RelativeLayout>
